// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no features 1`] = `
<svg
  className="SvgFeatureRendering"
  height="20px"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "position": "relative",
    }
  }
  width="100px"
/>
`;

exports[`one feature 1`] = `
<svg
  className="SvgFeatureRendering"
  height="10px"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "position": "relative",
    }
  }
  width="333.3333333333333px"
>
  <rect
    height={10}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "fill": "goldenrod",
      }
    }
    title="one"
    width={0.7}
    x={0.3}
    y={0}
  />
</svg>
`;
